# Tutorials_Qt_QML

./: LICENSE  README.md
IPC_communication/: CMakeLists.txt  main.cpp  nmsgpack.cpp  nmsgpack.h  readme.md
Qt_QML_Qtquick_communication/: CMakeLists.txt  Page1Form.ui.qml  README.md  backend.cpp  backend.h  main.cpp  main.qml  memcontrol.cpp  memcontrol.h  memrefptr.cpp  memrefptr.h
application_manager/: .gitignore  CMakeLists.txt  OListDynamic_swipe.qml  Page2Main.ui.qml  main.qml  qml.qrc
application_manager/application_manager/: Page1Info.ui.qml  qml.qrc
usb_dev_list/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
